# lapack

./: CMakeLists.txt
CMAKE/: ExternalBLIS.cmake
SRC/: CMakeLists.txt
TESTING/: CMakeLists.txt  runtest.cmake
TESTING/EIG/: CMakeLists.txt
TESTING/LIN/: CMakeLists.txt
TESTING/MATGEN/: CMakeLists.txt
lapacke/: CMakeLists.txt
